--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.26",
     "@solana/web3.js": "^1.89.1",
+    "@vercel/analytics": "^1.1.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
